<resources>
    <string name="app_name">MyContactList</string>
    <string name="button_to_display_a_list_of_contacts">Button to display a list of contacts</string>
    <string name="button_to_display_a_map">Button to display a map</string>
    <string name="button_to_display_settings">Button to display settings</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="saveTextString">Save</string>
    <string name="contact">Contact:</string>
    <string name="enter_name">Enter Name</string>
    <string name="address">Address</string>
    <string name="enter_street_address">Enter Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="home_phone">Home Phone:</string>
    <string name="cell_phone">Cell Phone:</string>
    <string name="e_mail_address">E-Mail Address:</string>
    <string name="birthday">Birthday:</string>
    <string name="_01_01_1970">01/01/1970</string>
    <string name="change">Change</string>
    <string name="selectText">Select</string>
    <string name="cancelText">Cancel</string>
    <string name="settings">Settings</string>
    <string name="sort_contacts_by">Sort Contacts By:</string>
    <string name="name">Name</string>
    <string name="sort_order">Sort Order:</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="delete">Delete:</string>

</resources>