<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints="Name"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/navbar_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButtonList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/button_to_display_a_list_of_contacts"
            app:srcCompat="@drawable/contactlisticon"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/imageButtonMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/button_to_display_a_map"
            app:srcCompat="@drawable/mapicon"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/imageButtonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/button_to_display_settings"
            app:srcCompat="@drawable/settingsicon"
            tools:ignore="RedundantDescriptionCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/toolBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/toolBar_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ToggleButton
            android:id="@+id/toggleButtonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:text="@string/togglebutton"
            android:textColor="#455A64"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/saveTextString"
            android:textColor="#D7CCC8"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollViewContact"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/navBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/contact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="14"
                android:hint="@string/enter_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textContact"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editName" />

            <EditText
                android:id="@+id/editAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="14"
                android:hint="@string/enter_street_address"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textAddress" />

            <EditText
                android:id="@+id/editCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="9"
                android:hint="@string/city"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:minHeight="48dp"
                android:nextFocusDown="@id/editState"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editAddress"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="2"
                android:hint="@string/state"
                android:inputType="textCapCharacters"
                android:maxLength="2"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:nextFocusDown="@id/editZipcode"
                android:textColorHint="#757575"
                app:layout_constraintStart_toEndOf="@+id/editCity"
                app:layout_constraintTop_toBottomOf="@+id/editAddress" />

            <EditText
                android:id="@+id/editZipcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="5"
                android:hint="@string/zipcode"
                android:inputType="number"
                android:maxLength="5"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_constraintStart_toEndOf="@+id/editState"
                app:layout_constraintTop_toBottomOf="@+id/editAddress" />

            <TextView
                android:id="@+id/textHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/home_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editCity" />

            <TextView
                android:id="@+id/textCell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/cell_phone"
                app:layout_constraintStart_toEndOf="@+id/editHome"
                app:layout_constraintTop_toBottomOf="@+id/editCity" />

            <EditText
                android:id="@+id/editHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="8"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="14"
                android:minHeight="48dp"
                android:nextFocusDown="@id/editCell"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textHome"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/editCell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="8"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="14"
                android:minHeight="48dp"
                android:nextFocusDown="@id/editEmail"
                app:layout_constraintStart_toStartOf="@+id/textCell"
                app:layout_constraintTop_toBottomOf="@+id/textCell"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textEMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/e_mail_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editHome" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="14"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textEMail"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textBDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/birthday"
                android:textColor="#757575"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editEmail" />

            <TextView
                android:id="@+id/textBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/_01_01_1970"
                app:layout_constraintStart_toEndOf="@+id/textBDay"
                app:layout_constraintTop_toBottomOf="@+id/editEmail" />

            <Button
                android:id="@+id/buttonBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:text="@string/change"
                app:layout_constraintBaseline_toBaselineOf="@id/textBirthday"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>